--- a/Implementation/WebTier/WebContent/JavaScript/Source/FundamentalTypes/FundamentalTypesTestSuite.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/FundamentalTypes/FundamentalTypesTestSuite.html
@@ -17,6 +17,8 @@
 		  newsuite.addTestPage("../../Source/FundamentalTypes/HashSetTest.html");
 		  newsuite.addTestPage("../../Source/FundamentalTypes/JavaCompatibilityTest.html");
 		  newsuite.addTestPage("../../Source/FundamentalTypes/LinkedHashMapTest.html");
+        newsuite.addTestPage("../../Source/FundamentalTypes/OptiosResourceTest.html");
+        newsuite.addTestPage("../../Source/FundamentalTypes/RemoteResourceTest.html");
 		  newsuite.addTestPage("../../Source/FundamentalTypes/StringTokenizerTest.html");
 		  newsuite.addTestPage("../../Source/FundamentalTypes/XmlResourceTest.html");
 		  return newsuite;
