--- a/Implementation/WebTier/WebContent/JavaScript/Source/FundamentalTypes/StringTokenizerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/FundamentalTypes/StringTokenizerTest.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML>
 <html>
 <head>
 <title>Test page for StringTokenizer.js</title>
@@ -16,8 +16,8 @@
    <script type="text/javascript" src="../../Libraries/MooTools/mootools-more-1.4.0.1.js"></script>
     
 	<script type="text/javascript" src="../FundamentalTypes/Assertion.js"></script>
-	<script language="JavaScript" src="../FundamentalTypes/WebUIException.js"></script>
-	<script language="JavaScript" src="../FundamentalTypes/JavaCompatibility.js"></script>
+	<script type="text/javascript" src="../FundamentalTypes/WebUIException.js"></script>
+	<script type="text/javascript" src="../FundamentalTypes/JavaCompatibility.js"></script>
 	<script type="text/javascript" src="../FundamentalTypes/StringTokenizer.js"></script>
 
    <script type="text/javascript">
