--- a/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/testRunner.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/JsUnit/testRunner.html
@@ -4,6 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=8"/>
+<meta HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
 <title>JsUnit Test Runner</title>
 <script language="JavaScript" type="text/javascript" src="app/jsUnitCore.js"></script>
 <script language="JavaScript" type="text/javascript" src="app/jsUnitTestManager.js"></script>
