--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDocumentElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDocumentElementTest.html
@@ -68,7 +68,7 @@
 	
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         //test_initialize();
+         test_construct_whenNestedElementConstructionFails_firesError();
       });
 				
       JsHamcrest.Integration.JsUnit();
