--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=8"/>
    <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
 	<title>ProcessPuzzle</title>
 			
@@ -41,21 +42,29 @@
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/DefaultStateUriTransformer.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/ComponentStateManager.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementFactory.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DataElementBehaviour.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DataElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/CompositeDocumentElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/CompositeDataElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentBody.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentFooter.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentHeader.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentPlugin.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/SmartDocument.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/ConfigurationTimeoutException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopElementFactory.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/Desktop/CompositeDesktopElement.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/Desktop.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopDocument.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopContentArea.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopColumn.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopFooter.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopFooterBar.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopHeader.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopNavigationBar.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopPanel.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopPanelHeader.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopPlugin.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/Desktop/DesktopTitleBar.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/NoneExistingDesktopContainerElementException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/ResourceNotFoundException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Desktop/WindowDocker.js"></script>
@@ -65,6 +74,8 @@
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/LinkedHashMap.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/OptionsResource.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/RemoteResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/XmlResource.js"></script>
    <script type="text/javascript" src="JavaScript/Source/HierarchicalMenuWidget/MenuSelectedMessage.js"></script>
@@ -84,13 +95,6 @@
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentImage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ResourceManager/DocumentStyleSheet.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementFactory.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/SmartDocument/CompositeDocumentElement.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentBody.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentFooter.js"></script>
-   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentHeader.js"></script>
-	<script type="text/javascript" src="JavaScript/Source/SmartDocument/SmartDocument.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SkinSelectorWidget/SkinChangedMessage.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SkinSelectorWidget/SkinSelectorWidget.js"></script>
 	<script type="text/javascript" src="JavaScript/Source/TabWidget/DuplicatedTabException.js"></script>
