--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopColumnTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopColumnTest.html
@@ -75,7 +75,7 @@
 		 
 		var DESKTOP_CONFIGURATION_URI = "../Desktop/Skins/ProcessPuzzle/DesktopConfiguration.xml";
 		var DESKTOP_CONTAINER_ID = "desktop";
-		var COLUMN_DEFINITION = "/pp:desktopConfiguration/columns/column[@name='leftColumn']";
+		var COLUMN_DEFINITION = "/desktopConfiguration/columns/column[@name='leftColumn']";
 		var PAGE_WRAPPER_ID = "pageWrapper";
 		var WEBUI_CONFIGURATION_URI = "../Desktop/WebUIConfiguration.xml";
 		
@@ -93,7 +93,7 @@
 		   webUIConfiguration = new WebUIConfiguration( WEBUI_CONFIGURATION_URI );
 		   webUILogger = new WebUILogger( webUIConfiguration );
 		   
-		   desktopDefinition = new XmlResource( DESKTOP_CONFIGURATION_URI, { nameSpaces : "xmlns:sd='http://www.processpuzzle.com/Desktop'" } );
+		   desktopDefinition = new XmlResource( DESKTOP_CONFIGURATION_URI, { nameSpaces : "xmlns:dc='http://www.processpuzzle.com/DesktopConfiguration'" } );
 		   var elementDefinition = desktopDefinition.selectNode( COLUMN_DEFINITION );
 		   column = new DesktopColumn( elementDefinition, { componentContainerId : DESKTOP_CONTAINER_ID } );
 		   desktopContainerElement = $( DESKTOP_CONTAINER_ID );
