--- a/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopPanelHeaderTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/Desktop/DesktopPanelHeaderTest.html
@@ -63,7 +63,7 @@
 		
 		var CONFIGURATION_URI = "../Desktop/WebUIConfiguration.xml";
 		var DESKTOP_CONFIGURATION_URI = "../Desktop/Skins/ProcessPuzzle/DesktopConfiguration.xml";
-		var PANEL_HEADER_SELECTOR = "/pp:desktopConfiguration/panels/panel[@name='console']/panelHeader";
+		var PANEL_HEADER_SELECTOR = "/desktopConfiguration/panels/panel[@name='console']/panelHeader";
 		var desktopConfiguration = null;
 		var panelHeader = null;
 		var panelHeaderDefinition = null;
