--- a/Implementation/WebTier/WebContent/JavaScript/Source/ResourceManager/ResourceManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/ResourceManager/ResourceManagerTest.html
@@ -53,6 +53,7 @@
    <script type="text/javascript" src="../ResourceManager/DocumentImage.js"></script>
    <script type="text/javascript" src="../ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="../ResourceManager/DocumentStyleSheet.js"></script>
+   <script type="text/javascript" src="../ResourceManager/UndefinedDocumentResourceException.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="../SmartDocument/CompositeDocumentElement.js"></script>
    <script type="text/javascript" src="../SmartDocument/DocumentHeader.js"></script>
@@ -67,7 +68,7 @@
 		
    <script type="text/javascript">
       window.addEvent('domready', function() {
-         //test_load_loadsStyleSheetsAndHandlesError();
+         test_load_loadsStyleSheetsAndHandlesError();
       });
 				
       JsHamcrest.Integration.JsUnit();
