--- a/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/Source/SmartDocument/CompositeDataElementTest.html
@@ -83,7 +83,7 @@
       }
       
       function beforeEachTest(){
-         inform( "beforeEachTest" );
+         //inform( "beforeEachTest" );
          webUIConfiguration = new WebUIConfiguration( CONFIGURATION_URI );
          webUILogger = new WebUILogger( webUIConfiguration );
          bundle = new XMLResourceBundle( webUIConfiguration );
@@ -99,7 +99,7 @@
          if( compositeDataElement.getState() > DocumentElement.States.INITIALIZED ) compositeDataElement.destroy();
          compositeDataElement = null;			
          documentContainerElement = null;
-         inform( "afterEachTest" );
+         //inform( "afterEachTest" );
       }
 		
       function test_unmarshall_determinesElementProperties(){
